<resources>
    <string name="app_name">ToDo</string>

    <!-- Strings related to login -->
    <string name="com_auth0_lock_action_sign_up">Zarejestruj</string>
    <string name="com_auth0_lock_action_log_in">Zaloguj</string>
    <string name="com_auth0_lock_forms_separator">Klasyczne logowanie:</string>
    <string name="com_auth0_lock_mode_sign_up">Rejestracja</string>
    <string name="com_auth0_lock_mode_log_in">Logowanie</string>
    <string name="com_auth0_lock_action_forgot_password">Zapomniałeś hasła?</string>
    <string name="com_auth0_lock_hint_email">Email</string>
    <string name="com_auth0_lock_hint_password">Hasło</string>
    <string name="com_auth0_lock_sign_up_terms">Rejestrując się akceptujesz politykę prywatności aplikacji</string>

    <string name="com_auth0_client_id">gCXnNoCaa4x1203E5bKpM785YpR0XkrF</string>
    <string name="com_auth0_domain">mevario.eu.auth0.com</string>
    <string name="app_title">ToDo</string>
    <string name="title_activity_home">ToDo Sekcja_23</string>

    <string name="navigation_drawer_open">Otwórz menu boczne</string>
    <string name="navigation_drawer_close">Zamknij menu boczne</string>

    <string name="action_settings">Ustawienia</string>

    <string name="title_activity_task_list">Lista zadań</string>

    <string name="add_button">Dodaj</string>
    <string name="add_button_plus">+</string>
    <string name="remove_button">Usuń</string>

    <string name="task_title_field">Tytuł</string>
    <string name="comment_field">Skomentuj</string>

    <string name="modify_button">Modyfikuj</string>
    <string name="save_button">Zapisz</string>
    <string name="icon">Ikona</string>

    <string name="remainder_dialog_title">Dodaj przypominacz</string>
    <string name="location_dialog_title">Dodaj lokacje</string>
    <string name="file_photo_dialog_title">Dodaj zdjęcie</string>
    <string name="file_voice_dialog_title">Dodaj notatkę głosową</string>
    <string name="path_to_file">Ścieżka do pliku</string>
    <string name="get_date">Wybierz datę</string>
    <string name="get_time">Wybierz godzinę</string>
    <string name="cancel_button">Anuluj</string>
    <string name="title_activity_photo_detail">PhotoDetailActivity</string>
</resources>
